<resources>
    <array name="arrPower">
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12"</item>
        <item>"13"</item>
        <item>"14"</item>
        <item>"15"</item>
        <item>"16"</item>
        <item>"17"</item>
        <item>"18"</item>
        <item>"19"</item>
        <item>"20"</item>
        <item>"21"</item>
        <item>"22"</item>
        <item>"23"</item>
        <item>"24"</item>
        <item>"25"</item>
        <item>"26"</item>
        <item>"27"</item>
        <item>"28"</item>
        <item>"29"</item>
        <item>"30"</item>
        <item>"31"</item>
        <item>"32"</item>
        <item>"33"</item>
    </array>
    <array name="arrFrequencyBand">
        <item>北美（902-928）</item>
        <item>中国1（920-925）</item>
        <item>欧频（865-867）</item>
        <item>中国2（840-845）</item>
        <item>全频段（840-960）</item>
    </array>

    <array name="arrLockMembank">
        <item>KillPwd</item>
        <item>AccessPwd</item>
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </array>

    <array name="arrLockAtion">
        <item>锁</item>
        <item>解锁</item>
        <item>永久锁</item>
        <item>永久解锁</item>
    </array>
    <array name="arrSelectMembank">
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
    </array>

    <array name="arrSession">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </array>

    <array name="arrMembank">
        <item>Reserved</item>
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
    </array>


    <string name="app_name">YSH高频检测</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="power">读写功率:</string>
    <string name="set_power">设置功率</string>
    <string name="get_power">获取功率</string>
    <string name="band">频段:</string>
    <string name="set_band">设置频段</string>
    <string name="get_band">获取频段</string>
    <string name="set_session">设置Session</string>
    <string name="get_session" translatable="false">获取Session</string>
    <string name="sn">序号</string>
    <string name="count">种类</string>
    <string name="tag_count">标签张数:</string>
    <string name="total_count">总次数:</string>
    <string name="time">盘点时间:</string>
    <string name="start">开始盘点</string>
    <string name="one">单次盘点</string>
    <string name="clear">清空</string>
    <string name="check_tag">指定标签</string>
    <string name="password">访问密码:</string>
    <string name="destory">销毁</string>
    <string name="lock_area">锁的区域:</string>
    <string name="lock_type">锁的操作:</string>
    <string name="lock">锁</string>
    <string name="tip">注意：起始地址和长度单位是字,1个字等于两个字节</string>
    <string name="read">读取</string>
    <string name="data">数   据:</string>
    <string name="data_length">数据长度:</string>
    <string name="start_address">起始地址:</string>
    <string name="area">区   域:</string>
    <string name="asses_pwd">访问密码:</string>
    <string name="write">写</string>
    <string name="inventory">盘点</string>
    <string name="set">配置</string>
    <string name="starts">开始盘点</string>
    <string name="stop">停止盘点</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="tips">密码长度必须是4个字节的十六进制数据!</string>
    <string name="select">选择指定标签</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="no">数据不能为空!</string>
    <string name="nono">数据和长度不匹配!</string>
    <string name="start_connect">开始连接…</string>
    <string name="firmware_ver">固件版本:</string>
    <string name="temperature">模块温度:</string>
    <string name="api">设置功率: 低</string>
    <string name="app">模块版本</string>
    <string name="temperaturem">设置功率: 高</string>
    <string name="firm">设置功率: 中</string>

</resources>

