<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.InventoryFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/sn"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="40dp"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="名称"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
<!--            <TextView-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:text="距离"-->
<!--                android:layout_width="40dp"-->
<!--                android:textSize="18sp"-->
<!--                android:layout_height="wrap_content"/>-->
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/count"
                android:textSize="18sp"
                android:layout_width="40dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/tag_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:id="@+id/tvNumber"
                android:text="0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/total_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:id="@+id/tvCount"
                android:text="0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/tvTime"
                android:text="0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btStartStop"
                android:text="@string/start"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <Button
                android:id="@+id/btnSingle"
                android:text="@string/one"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btClear"
                android:text="@string/clear"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <CheckBox
                android:id="@+id/cbSelectInventory"
                android:text="@string/check_tag"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>